# KORC

./: .gitignore  CMakeCache.txt  CMakeLists.txt  FORD_PF.md  README.md  build.sh  build_gnu.sh  cmake_install.cmake  innocuous.txt  innocuous_change.txt  input_file.korc  korc.sh  korc.sh~  setup_cmake  spack.yaml
.cmfkit/scenario/: ci_debug  egyro
.cmfkit_base/: launch  mod_deflist
.cmfkit_base/scenario/: basic
.github/workflows/: agate.yml  agave.yml  cache.yml  cachepoke.yml  container.yml  inert_container.yml  inert_machine.yml  inert_spack.yml  machine.yml  main.yml  olivine.yml  onyx.yml  spack-buildcache.yml  spack-src-cache.yml  spack.yml  spackbuild.yml
FDdoc/: index.html  search.html
FDdoc/interface/: array_copy.html  assert.html  avevar.html  bandec.html  bessi.html  bessi0.html  bessik.html  bessj1.html  bessjy.html  bessk.html  bessk0.html  bessk1.html  bessy.html  bessy0.html  bessy1.html  bico.html  broydn.html  caldat.html  chder.html  chebft.html  chstwo.html  cisi.html  cntab2.html  convlv.html  correl.html  cosft2.html  cumsum.html  dawson.html  dbrent.html  dfpmin.html  dftcor.html  eclass.html  eclazz.html  elle.html  ellf.html  ellpi.html  elmhes.html  erf.html  erfc.html  erfcc.html  (+125 more)
FDdoc/lists/: files.html  modules.html  procedures.html
FDdoc/module/: korc_avalanche.html  korc_coords.html  korc_fields.html  korc_hdf5.html  korc_hpc.html  korc_m3d_c1.html  korc_ppusher.html  korc_profiles.html  korc_random.html  korc_types.html  korc_units.html  nr.html  nrtype.html  nrutil.html  special_functions.html
FDdoc/page/: index.html
FDdoc/proc/: add_analytical_e_p.html  add_interp_sce_p.html  (+225 more)
FIO/: CMakeLists.txt  setup_cmake
FIO/fusion_io/: CMakeLists.txt  fusion_io.h  fusion_io_defs.h  fusion_io_fortran.F90  m3dc1_field.h  nimrod_source.h  push_interface.f90
FIO/m3dc1_lib/: CMakeLists.txt  m3dc1_file.h  m3dc1_mesh.cpp
HDF5/: README.txt
KORC-FO/: CMakeLists.txt  KORC-FO  Makefile  automatic_script.sh  compile.sh  cori_HASWELL.job  cori_KNL.job  cori_batch_job.pbs  edison.job  load_nersc_modules.sh  mpirun_debug_queue.job  mpirun_job.pbs  runjob_avalanche.job  runjob_edison.job  scaling_omp.sh  setup_cmake
KORC-FO/docs/: doxygen_log.txt
KORC-FO/errors/: README.txt
KORC-FO/inputFiles/: C-MOD_EFIT.h5  README.txt  input_file.korc  input_file_C-Mod.korc  input_file_equilibrium.korc  input_file_scaling.korc  input_parameters.korc
KORC-FO/modules/: README.txt
KORC-FO/outputFiles/: README.txt
KORC-FO/restart/: README.txt
KORC-FO/sources/: finalize.f90  initialize.f90  main.f90  main_mpi.f90  structures.f90  types.f90
KORC-FO/src/: CMakeLists.txt  constants.f90  emf.f90  external_subroutines.f90  fields.f90  finalize.f90  hammersley_generator.f90  initialize.f90  korc_HDF5.f90  korc_avalanche.f90  korc_binning_diagnostic.f90  korc_c_random.cpp  korc_collisions.f90  korc_constants.f90  korc_coords.f90  korc_energy_pdfs.f90  korc_experimental_pdf.f90  korc_fields.f90  korc_finalize.f90  korc_hammersley_generator.f90  korc_hpc.f90  korc_initialize.f90  korc_initialize_particles.f90  korc_interp.f90  korc_m3d_c1_interface.f90  korc_ppusher.f90  korc_profiles.f90  korc_random.f90  korc_rnd_numbers.f90  korc_simple_equilibrium_pdf.f90  korc_spatial_distribution.f90  korc_synthetic_camera.f90  korc_types.f90  korc_units.f90  korc_velocity_distribution.f90  main.f90  main_documentation_page.f90  main_mpi.f90  output_HDF5.f90  pic.f90  (+5 more)
PSPLINE_additions/: ezspline_interp.f90  ezspline_mod.f90
build_scripts/: build_nv_cpu.sh  build_nv_gpu.sh
ci_stub/: agate_job_test.sh  onyx_job_build_cpu.sh  onyx_job_build_gpu.sh  onyx_job_test_cpu.sh  onyx_job_test_gpu.sh
docs/: index.html  korc_testing.md  search.html
nacho-spackenv/: spack.yaml
post-processing/: Fulop2006.m  PDF_renormalization.m  binningDiagnostic.m  cameraPicsAnalysis.m  diagnoseKORC.m  ellipseInitialCondition.m  metropolis_hastings.m  poincare_NIMROD.m  syntheticCameraFortran.m  syntheticCameraFortran_new.m  test_uniform_ellipse.m
spack/: package.py
spackpack/: package.py  spack_create.sh
src/: #korc_HDF5.f90#  #korc_collisions.f90#  #korc_experimental_pdf.f90#  #korc_initialize.f90#  #korc_interp.f90#  #korc_ppusher.f90#  #korc_random.f90#  #korc_rnd_numbers.f90#  #korc_units.f90#  #korc_velocity_distribution.f90#  .#korc_collisions.f90  .#korc_initialize.f90  .#korc_interp.f90  .#korc_ppusher.f90  .#korc_velocity_distribution.f90  CMakeLists.txt  Makefile  cmake_install.cmake  get_git_details.sh  korc_HDF5.f90  korc_HDF5.f90~  korc_avalanche.f90  korc_avalanche.f90~  korc_binning_diagnostic.f90  korc_binning_diagnostic.f90~  korc_c_random.cpp  korc_c_random.cpp~  korc_collisions  korc_collisions.f90  korc_collisions.f90~  korc_constants.f90  korc_coords.f90  korc_coords.f90~  korc_experimental_pdf.f90  korc_experimental_pdf.f90~  korc_fields.f90  korc_fields.f90~  korc_fields_old.f90  korc_finalize.f90  korc_fio_interface.f90  (+29 more)
test/: CMakeLists.txt  korc_test.f90  test_hpc.f90  test_io.f90  test_mpi.f90  test_random.f90
test/aorsa/: file_0.h5  input_file_D3D_171089_AORSA.korc  korc_aorsa.sh.in
test/aorsa/rank_1/: file_0.h5
test/aorsa/rank_2/: file_0.h5  file_1.h5
test/aorsa/rank_4/: file_0.h5  file_1.h5  file_2.h5  file_3.h5
test/aorsa/rank_8/: file_0.h5  file_1.h5  file_2.h5  file_3.h5  file_4.h5  file_5.h5  file_6.h5  file_7.h5
test/egyro/: file_0.h5  korc_egyro.sh  korc_egyro.sh.in
test/fruit/: Makefile
test/mars/: D3D_191366_1762ms_MARS.h5  file_0.h5  file_0_1.h5  file_0_2.h5  file_0_4.h5  file_0_8.h5  input_file_D3D_191366_1762ms_MARS.korc  korc_mars.sh  korc_mars.sh.in
test/mars/rank_1/: file_0.h5
test/mars/rank_16/: file_0.h5  file_1.h5  file_10.h5  file_11.h5  file_12.h5  file_13.h5  file_14.h5  file_15.h5  file_2.h5  file_3.h5  file_4.h5  file_5.h5  file_6.h5  file_7.h5  file_8.h5  file_9.h5
test/mars/rank_2/: file_0.h5  file_1.h5
test/mars/rank_4/: file_0.h5  file_1.h5  file_2.h5  file_3.h5
test/mars/rank_8/: file_0.h5  file_1.h5  file_2.h5  file_3.h5  file_4.h5  file_5.h5  file_6.h5  file_7.h5
test/reg_tests/: korc_regtest1.sh
(+1008 files in other folders)
